[metadata]
name = crowdsec-misp-feed-generator
version = 0.0.1
author = CrowdSec
author_email = core.tech@crowdsec.net
description = CrowdSec MISP Feed Generator 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crowdsecurity/crowdsec-misp-feed-generator
project_urls =
    Bug Tracker = https://github.com/crowdsecurity/crowdsec-misp-feed-generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find: 
python_requires = >=3.6
install_requires =
    pyyaml
    requests
    pytimeparse


[options.entry_points]
console_scripts =
    crowdsec-misp-feed-generator = misp_feed_generator.main:main

[options.packages.find]
where = src